# diff_rs

./: Cargo.toml
examples/: config.rs
fixtures/: test.yml
src/: cli.rs  config.rs  lib.rs
