[package]
name = "diff_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_yaml = "0.9.10"       # 从yaml读数据
tokio = { version = "1.24.1", features = ["full"] }
# 默认的tls是native-tls
reqwest = { version = "0.11.13", default-features = false, features = ["rustls"] }
similar = { version = "2.2.1", features = ["inline"] }           # 一个也是做diff的库
console = "0.15.4"
http-serde = "1.1.2"
url = { version = "2.3.1", features = ["serde"] }
serde_json = "1.0.91"
anyhow = "1.0.68"
